--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.3.1",
     "react-native": "0.55.4",
+    "react-native-contacts": "^2.2.1",
     "react-redux": "^5.0.7",
     "react-router-native": "^4.3.0",
     "redux": "^4.0.0"
