--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "redux": "^4.0.0"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.5",
     "babel-jest": "23.2.0",
     "babel-preset-react-native": "4.0.0",
-    "eslint": "^4.0.0",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^13.0.0",
+    "eslint-plugin-react": "^7.10.0",
+    "eslint-plugin-react-native": "^3.2.1",
     "jest": "23.2.0",
+    "prettier": "^1.13.5",
     "react-test-renderer": "16.3.1"
   },
   "jest": {
