--- a/package.json
+++ b/package.json
@@ -7,7 +7,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.2.5",
+    "apollo-client": "^2.3.5",
+    "apollo-link": "^1.2.2",
+    "apollo-link-error": "^1.1.0",
+    "apollo-link-http": "^1.5.4",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.9.2",
     "react": "16.3.1",
+    "react-apollo": "^2.1.9",
     "react-native": "0.55.4",
     "react-native-contacts": "^2.2.1",
     "react-redux": "^5.0.7",
