--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "react-apollo": "^2.1.9",
     "react-native": "0.55.4",
     "react-native-contacts": "^2.2.1",
+    "react-native-vector-icons": "^4.6.0",
+    "react-navigation": "^2.6.2",
+    "react-navigation-material-bottom-tabs": "^0.3.0",
     "react-redux": "^5.0.7",
     "react-router-native": "^4.3.0",
     "redux": "^4.0.0"
