--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "apollo-link": "^1.2.2",
     "apollo-link-error": "^1.1.0",
     "apollo-link-http": "^1.5.4",
+    "color": "^3.0.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
+    "lodash": "^4.17.10",
+    "randomcolor": "^0.5.3",
     "react": "16.3.1",
     "react-apollo": "^2.1.9",
     "react-native": "0.55.4",
