--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-navigation-material-bottom-tabs": "^0.3.0",
     "react-redux": "^5.0.7",
     "react-router-native": "^4.3.0",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.5",
