--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-redux": "^5.0.7",
     "react-router-native": "^4.3.0",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "reselect": "^3.0.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.5",
