--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "lodash": "^4.17.10",
+    "luxon": "^1.3.1",
     "randomcolor": "^0.5.3",
     "react": "16.3.1",
     "react-apollo": "^2.1.9",
