--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "color": "^3.0.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
+    "jsc-android": "^224109.0.0",
     "lodash": "^4.17.10",
-    "luxon": "^1.3.1",
+    "moment": "^2.22.2",
     "randomcolor": "^0.5.3",
     "react": "16.3.1",
     "react-apollo": "^2.1.9",
