--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-redux": "^5.0.7",
     "react-router-native": "^4.3.0",
     "redux": "^4.0.0",
+    "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^3.0.1",
     "subscriptions-transport-ws": "^0.9.14"
